feat: add mask to input in form

--- a/app/views/municipes/_form.html.erb
+++ b/app/views/municipes/_form.html.erb
@@ -13,7 +13,7 @@
       <div class="flex justify-between">
         <div class="w-1/3">
           <%= form.label :cpf, t('activerecord.attributes.municipe.cpf')%>
-          <%= form.text_field :cpf, class: "block shadow border #{@municipe.errors[:cpf].any? ? 'border border-red-500' : 'border-zinc-200'} outline-none px-3 py-3 mt-2 w-full" %>
+          <%= form.text_field :cpf, class: "block shadow border #{@municipe.errors[:cpf].any? ? 'border border-red-500' : 'border-zinc-200'} outline-none px-3 py-3 mt-2 w-full", data: { "municipe-form-target": "cpf" } %>
           <% if @municipe.errors[:cpf].present? %>
             <p class="text-red-500 text-sm mt-1">
               <%= @municipe.errors[:cpf].first %>
@@ -22,7 +22,7 @@
         </div>
         <div class="w-1/3 px-2">
           <%= form.label :cns, t('activerecord.attributes.municipe.cns') %>
-          <%= form.text_field :cns, class: "block shadow border #{@municipe.errors[:cns].any? ? 'border border-red-500' : 'border-zinc-200'} outline-none px-3 py-3 mt-2 w-full" %>
+          <%= form.text_field :cns, class: "block shadow border #{@municipe.errors[:cns].any? ? 'border border-red-500' : 'border-zinc-200'} outline-none px-3 py-3 mt-2 w-full", data: { "municipe-form-target": "cns" } %>
           <% if @municipe.errors[:cns].present? %>
             <p class="text-red-500 text-sm mt-1">
               <%= @municipe.errors[:cns].first %>
@@ -44,7 +44,7 @@
       <div class="flex justify-between">
         <div class="w-1/3">
           <%= form.label :phone, t('activerecord.attributes.municipe.phone') %>
-          <%= form.text_field :phone, class: "block shadow border #{@municipe.errors[:phone].any? ? 'border border-red-500' : 'border-zinc-200'} outline-none px-3 py-3 mt-2 w-full" %>
+          <%= form.text_field :phone, class: "block shadow border #{@municipe.errors[:phone].any? ? 'border border-red-500' : 'border-zinc-200'} outline-none px-3 py-3 mt-2 w-full", data: { "municipe-form-target": "phone" } %>
           <% if @municipe.errors[:phone].present? %>
             <p class="text-red-500 text-sm mt-1">
               <%= @municipe.errors[:phone].first %>
